# liteagent

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  docker-compose.yml  install.sh  liteagent-architecture.md  pyproject.toml  soul.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  test.yml
docs/: README_RU.md
liteagent/: __init__.py  __main__.py  agent.py  backup.py  boot.py  circuit_breaker.py  cognitive.py  config.py  config_watcher.py  embedders.py  evolution.py  file_manager.py  file_queue.py  health.py  hooks.py  knowledge_base.py  logging_config.py  main.py  memory.py  metacognition.py  multimodal.py  night_worker.py  onboarding.py  planning.py  plugins.py  pool.py  providers.py  rag.py  scheduler.py  skills.py  storage.py  synthesis.py  tasks.py  tools.py  vault.py  voice.py  web.py
liteagent/channels/: api.py  cli.py  dashboard.py  telegram.py
liteagent/skills/knowledge_base/: SKILL.md
liteagent/skills/voice/: SKILL.md
liteagent/skills/web/: SKILL.md
liteagent/static/: dashboard.html
tests/: conftest.py  test_agent.py  test_backup.py  test_boot.py  test_circuit_breaker.py  test_cognitive.py  test_config.py  test_config_reload.py  test_dashboard.py  test_embedders.py  test_evolution.py  test_file_manager.py  test_file_queue.py  test_health.py  test_hooks.py  test_knowledge_base.py  test_memory.py  test_memory_conflicts.py  test_metacognition.py  test_multimodal.py  test_night_worker.py  test_onboarding.py  test_planning.py  test_pool.py  test_providers.py  test_queue.py  test_rag.py  test_scheduler.py  test_self_healing.py  test_skills.py  test_synthesis.py  test_tasks.py  test_telegram.py  test_tools.py  test_vault.py  test_voice.py  test_web.py
